# toyota-dcm

./: BUIC_Toyota_DCM_NA_Aug_2016--Credits.txt  README.md
DISTRO/attr/: 0001-walk_tree-do-not-follow-symlink-to-directory-with-h.patch  0002-getfattr-return-non-zero-exit-code-on-failure.patch  0003-fix-typos-in-attr.1-man-page.patch  config.status  libtool
DISTRO/dbus/: 0001-Changes-to-delete-references-for-services-of-syslog.patch
DISTRO/dbus-glib/: 0001-Micro-version.patch  0001-disable-document-generation.patch
DISTRO/dnsmasq/: 0001-Added-.gitignore.patch  0002-OTP-Port-of-Wifimgr-Platform-Infrastructure.patch  0003-Change-in-dbus-configuration-for-Multiple-APNs-relat.patch  0004-Modified-the-makefile-to-push-dnsmasq.conf-to-etc-db.patch
DISTRO/dnsmasq/mayhem/harness/: CMakeLists.txt  FakeNetlinkDoneState.cpp  FakeNetlinkDoneState.h  FakeNetlinkGetAddrState.cpp  FakeNetlinkGetAddrState.h  FakeNetlinkReadyState.cpp  FakeNetlinkReadyState.h  FuzzPayloadDeliveredState.cpp  FuzzPayloadDeliveredState.h  FuzzPayloadReadyState.cpp  FuzzPayloadReadyState.h  State.cpp  State.h  UntrackedState.cpp  UntrackedState.h  harness.cpp
DISTRO/eglibc/: 0001-eglibc-svn-arm-lowlevellock-include-tls.patch  0002-IO-acquire-lock-fix.patch  0003-stack-protector-test.patch  0004-armv4-eabi-compile-fix.patch  0005-OE-eglibc-configs-and-porting.patch  0006-Added-.gitignore.patch  0007-Apply-security-patch.patch  0008-Fix-for-stack-based-buffer-overflow-issue.patch  eglibc-security.patch
DISTRO/expat/: 0001-initial-.gitignore.patch  Makefile  config.status  libexpat.la  libtool
(+2176 files in other folders)
